Fix Account Names being cropped (#3626)

--- a/ui/app/css/itcss/generic/index.scss
+++ b/ui/app/css/itcss/generic/index.scss
@@ -13,7 +13,6 @@ body {
   font-family: Roboto, Arial;
   color: #4d4d4d;
   font-weight: 300;
-  line-height: 1.4em;
   background: #f7f7f7;
   width: 100%;
   height: 100%;
@@ -103,6 +102,7 @@ input.large-input {
     &::after {
       content: '\00D7';
       font-size: 40px;
+      line-height: 20px;
     }
   }
 
